--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Vendors/v-sdk"]
 	path = Vendors/v-sdk
 	url = git@github.com:yamp-project/v-sdk.git
+[submodule "Vendors/framework"]
+	path = Vendors/framework
+	url = git@github.com:yamp-project/framework.git
