--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Vendors/v8"]
 	path = Vendors/v8
 	url = git@github.com:yamp-project/v8.git
+[submodule "Vendors/v8helper"]
+	path = Vendors/v8helper
+	url = git@github.com:yamp-project/v8helper.git
