refactor: cleanup includes and use pch for common stl

--- a/Client/CMakeLists.txt
+++ b/Client/CMakeLists.txt
@@ -10,13 +10,23 @@ else()
     set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/win64/${CMAKE_BUILD_TYPE})
 endif()
 
+# Gather source files
 file(GLOB_RECURSE PROJECT_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/source/*.h ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
+
+# Create shared library target
 add_library(${PROJECT_NAME} SHARED ${PROJECT_SOURCE_FILES})
 
+# Apply precompiled headers directly to the project target
+target_precompile_headers(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/source/stdafx.h)
+
+# Include directories
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/source)
+
+# Link external libraries
 target_link_libraries(${PROJECT_NAME} PUBLIC framework::framework yamp::sdk v8helper::v8helper)
 target_link_libraries(${PROJECT_NAME} PUBLIC shlwapi.lib winmm.lib DbgHelp.lib advapi32.lib)
 
+# Set C++ standard and compile definitions
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_23)
 target_compile_definitions(${PROJECT_NAME} PUBLIC
     NOMINMAX
